# rabbitmq_marketplace

./: .gitignore  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/app/: consumer.py  crud.py  database.py  events.py  main.py  models.py  models_events.py  rabbit.py  schemas.py
