[tool.poetry]
name = "market-rabbit"
version = "0.1.0"
description = ""
authors = ["Михаил Богачев"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
aio-pika = "^9.6.1"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
